manifests/istio/004-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: production
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend
status:
  loadBalancer: {}
